Update DeviceService.java